<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusicLibraryAndroidOnly</string>
    <!--string name="hello_world">Hello world!</string-->
    <string name="action_settings">Settings</string>
    
    <string name="user_name">User Name:</string>
    <string name="pwd">Password:</string>
    <string name="login">Login</string>
    
    <string name="title_genre">Genre:</string>
    <string name="title_date">Date:</string>
    <string name="title_length">Length:</string>
    <string name="title_comments">Comment:</string>
    <string name="add_new_song">+ Add song</string>
    <string name="dismiss_button">Cancel</string>
    <string name="add_button">Add</string>
    
    <string name="dialog_artist">Artist</string>
    <string name="dialog_title">Song title</string>
    <string name="dialog_length">Length</string>
    <string name="button_edit">Edit</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    
    <string name="title_song_list">Songs</string>
    <string name="title_song_detail">Song Detail</string>
    
    <string name="menu_add">Add song</string>
    
    <string name="img_desc">Description of the Image View</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
