<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="25px"
    android:minHeight="25px">
    <TextView
        android:text="@string/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_text_view" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_text_field" />
    <TextView
        android:text="@string/pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwd_text_view" />
    <EditText
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwd_text_field" />
    <Button
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button" />
</LinearLayout>
