<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:minWidth="25dp"
    android:minHeight="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:minWidth="50dp">
        <TextView
            android:text="@string/dialog_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center"
            android:id="@+id/dialog_textview_artist" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/dialog_edittext_artist" />
        <TextView
            android:text="@string/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center"
            android:id="@+id/dialog_textview_title" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/dialog_edittext_title" />
        <LinearLayout
            android:orientation="horizontal"
            android:minWidth="25dp"
            android:minHeight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:id="@+id/linearLayout1">
            <TextView
                android:text="@string/dialog_length"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:id="@+id/dialog_textview_length" />
            <EditText
                android:inputType="time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="100"
                android:id="@+id/dialog_edittext_length" />
        </LinearLayout>
        <Button
            android:text="@string/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_add_button" />
        <Button
            android:text="@string/dismiss_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_dismiss_button" />
    </LinearLayout>
    

</RelativeLayout>
