<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:background="?android:windowBackground"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:minWidth="25px"
            android:minHeight="25px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/linearLayout1">
            <ImageView
                android:src="@android:drawable/ic_menu_gallery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:padding="10dp"
                android:id="@+id/edit_album_image" />
            <LinearLayout
                android:orientation="vertical"
                android:minWidth="25px"
                android:minHeight="25px"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:padding="5dp"
                android:id="@+id/linearLayout2">
                <EditText
                    android:text="Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edittext_album_artist" />
                <EditText
                    android:inputType="textMultiLine"
                    android:text="Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edittext_song_title" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:minWidth="25px"
            android:minHeight="25px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout3">
            <LinearLayout
                android:orientation="horizontal"
                android:minWidth="25px"
                android:minHeight="25px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:id="@+id/linearlayout_genre">
                <TextView
                    android:text="@string/title_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:id="@+id/textview_title_genre" />
                <EditText
                    android:text="Text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:id="@+id/edittext_data_genre" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:minWidth="25px"
                android:minHeight="25px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:id="@+id/linearlayout_date">
                <TextView
                    android:text="@string/title_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:id="@+id/textview_title_date" />
                <EditText
                    android:text="Text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:id="@+id/edittext_data_date" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:minWidth="25px"
                android:minHeight="25px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:id="@+id/linearlayout_length">
                <TextView
                    android:text="@string/title_length"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:id="@+id/textview_title_length" />
                <EditText
                    android:text="Text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:id="@+id/edittext_data_length" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:minWidth="25px"
                android:minHeight="25px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:id="@+id/linearlayout_comments">
                <TextView
                    android:text="@string/title_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:id="@+id/textview_title_comment" />
                <EditText
                    android:text="Text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:id="@+id/edittext_data_comment" />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:text="@string/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_details_button" />
        <Button
            android:text="@string/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button" />
    </LinearLayout>
</ScrollView>
